...
          const Padding(
            padding: EdgeInsets.only(
              bottom: 8,
              top: 10,
            ),
            child: Text(
              'Sinopse',
              style: TextStyle(
                fontSize: 20,
                color: Colors.white,
                fontWeight: FontWeight.w700,
              ),
            ),
...
